src/styles/global.css
@import "tailwindcss";

@theme {
    --color-text: #FFFFFF;
    --color-background: #000000;
    --color-background_secondary: #3E3939;
    --color-primary: #8E1616;
    --color-secondary: #E23C52;
    --color-accent: #E52D2A;
}

html {
    font-family: "Onest Variable", system-ui, sans-serif;
    color: var(--color-text);
    background: rgb(32, 32, 32);
    scroll-behavior: smooth;
}

body {
    margin: 0;
    width: 100vw;
    height: 100vh;
    position: relative;
}

h1 {
    font-size: 2.5rem;
    font-weight: 700;
    color: var(--color-text);
}

/*CONTAINER ALIGNMENT*/
.container-element {
    padding-inline: 5vh;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  
@media (min-width: 1650px) {
    .container-element {
        padding-inline: 50vh;
    }
}
/*CONTAINER ALIGNMENT*/

.clip_triangle_shape {
    clip-path: polygon(50% 0, 100% 100%, 0 100%);
}

/* Glassmorphism effect */
.navbar-glass {
    background-color: rgba(0, 0, 0, 0.1); /* Semi-transparent white */
    backdrop-filter: blur(10px); /* Apply the blur effect */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional subtle shadow */
}

